--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "appDisplayName": "Fitbittodo",
     "iconFile": "resources/icon.png",
     "wipeColor": "#ffffff",
-    "requestedPermissions": [],
+    "requestedPermissions": ["access_internet"],
     "buildTargets": [
       "higgs",
       "meson",
