--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fitbittodo",
+  "name": "ToDo-Cloud",
   "version": "0.1.0",
   "private": true,
   "license": "UNLICENSED",
@@ -11,7 +11,7 @@
   "fitbit": {
     "appUUID": "0f6ae7fd-5110-47f5-8211-ba65ce4dfec8",
     "appType": "app",
-    "appDisplayName": "Fitbittodo",
+    "appDisplayName": "ToDo-Cloud",
     "iconFile": "resources/icon.png",
     "wipeColor": "#ffffff",
     "requestedPermissions": [
